# FastAPI_live

./: README.md  main.py  pyproject.toml
Day2/: main.py
Day3/: init_db.py  main.py  test.db
Day4/: index.html  main.py
Day5/: Index.html  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  trading_game.db
Day5/routers/: market.py  trade.py
